@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:                                              -*-text-*-
-Last modified at [$Date: 2004/04/15 19:41:38 $]
+Last modified at [$Date: 2004/04/15 19:54:49 $]
 
 Release:
 
@@ -154,12 +154,6 @@ PATCHES TO BACKPORT FROM 2.1
     *) mod_alias: Emit a warning if an alias overlaps another
           modules/mappers/mod_alias.c: r1.45, 1.46, 1.47, 1.48, 1.55
       +1: nd
-
-    *) mod_ssl: Disable the extra session caching in OpenSSL to prevent
-       memory leak. PR: 26562.
-           modules/ssl/ssl_engine_init.c:    r1.127
-           modules/ssl/ssl_toolkit_compat.h: r1.41
-       +1: madhum, jorton, trawick
 
     *) Fixed mean and median calculations in ab, also changed where time values
        are set for start and connect when doing keep alive benchmarking.
