@@ -206,4 +206,8 @@ typedef void (*modssl_popfree_fn)(char *data);
 #define HAVE_SSL_X509V3_H
 #endif
 
+#ifndef SSL_SESS_CACHE_NO_INTERNAL
+#define SSL_SESS_CACHE_NO_INTERNAL  SSL_SESS_CACHE_NO_INTERNAL_LOOKUP
+#endif
+
 #endif /* SSL_TOOLKIT_COMPAT_H */
